tests/netedit/demandelements/route/basic/invalid_vclass/routes.netedit
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2023-07-25 08:50:26 by Eclipse SUMO netedit Version v1_18_0+0508-22637e2f52c
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <!-- Routes -->
    <route id="r_0" edges="Edge0 Edge1 Edge2 EdgeBike0 EdgeCenter0"/>
</routes>
